# adventofcode2024

./: .ghcid  adventofcode2024.cabal  default.nix
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Main.hs
